# requisites_extractors

./: .dockerignore  .env.example  .gitignore  12.06.26 продолжение программы.txt  123.txt  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  fix_structure.py  pyproject.toml  script.py  shablon.docx  test_real.docx  план.txt
app/: config.py  dependencies.py  logging_config.py  main.py
docs/: ROADMAP.docx  plan-21.06.26.txt
exports/: 00b9fa4e_result.docx  00b9fa4e_result.json  00b9fa4e_result.xlsx  0b8637d9_result.docx  0b8637d9_result.json  0b8637d9_result.xlsx  11f36028_result.docx  11f36028_result.json  11f36028_result.xlsx  12955fbf_result.docx  12955fbf_result.json  12955fbf_result.xlsx  2222ee09_result.docx  2222ee09_result.json  2222ee09_result.xlsx  29bc717b_result.docx  29bc717b_result.json  29bc717b_result.xlsx  353d5009_result.docx  353d5009_result.json  353d5009_result.xlsx  387abc81_result.docx  387abc81_result.json  387abc81_result.xlsx  3a41ad41_result.docx  3a41ad41_result.json  3a41ad41_result.xlsx  3b1d7d92_result.docx  3b1d7d92_result.json  3b1d7d92_result.xlsx  40c511ed_result.docx  40c511ed_result.json  40c511ed_result.xlsx  4751eaa5_result.docx  4751eaa5_result.json  4751eaa5_result.xlsx  47871a1a_result.docx  47871a1a_result.json  47871a1a_result.xlsx  480136c0_result.docx  (+113 more)
processed/: 2222ee09_raw.txt  387abc81_normalized.txt  387abc81_raw.txt  3a41ad41_raw.txt  3b1d7d92_raw.txt  59f69daa_normalized.txt  67a73e96_normalized.txt  6b432753_raw.txt  853e6d0d_raw.txt  8a9bd491_raw.txt  98f0b4fd_normalized.txt  98f0b4fd_raw.txt  9df6347b_raw.txt  ab304ac3_normalized.txt  b87687cf_raw.txt  ba53bd22_raw.txt  c9d08fee_normalized.txt  c9d08fee_raw.txt  e2cc9274_raw.txt  e804eacf_raw.txt
requirements/: base.txt  dev.txt  prod.txt  requirements.txt
scripts/: batch_process.py  run_cli.py  (+2 more)
(+57 files in other folders)
