[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "requisites_extractor"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q --cov=app --cov-fail-under=70"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/services/*",
    "app/extractors/*",
    "app/llm/*",
    "app/web/*",
    "app/validators/*",
    "app/exporters/docx_exporter.py",
    "app/exporters/xlsx_exporter.py",
    "app/core/constants.py",
    "app/core/enums.py",
    "app/core/exceptions.py",
    "app/logging_config.py",
    "app/schemas/document.py",
    "app/schemas/extraction.py",
]
